<resources>
    <string name="app_name">FutMatchApp</string>
    <string name="bienvenida">¡Bienvenido a FutMatch!</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_registrate">¿No tienes cuenta? Regístrate aquí</string>
    <string name="desc_logo">Logo de la aplicación</string>
    <string name="hint_username_nuevo">Nuevo Username</string>
    <string name="btn_saltar_registro">Saltar por ahora</string>
    <string name="tinder_placeholder">Aquí aparecerá el Tinder de FutMatch</string>
    <string name="error_posicion_vacia">¡Toca la cancha para elegir tu posición!</string>
    <string name="error_username_formato">El username debe ser minúsculas, sin espacios, máx 8 letras.</string>
    <string name="error_datos_incompletos">Llena tu nombre, apellido y asegúrate de configurar los sliders.</string>
    <string name="bubble_card_name_default">Nombre del Partido</string>
    <string name="bubble_card_date_default">Hoy, 20:00</string>
    <string name="bubble_card_location_default">Polideportivo Municipal</string>
</resources>